# BlazinglyFastJournaling

./: .gitmodules  README.md
Backend/: Cargo.toml  blazingly_fast.db
Backend/src/: configuration.rs  configuration.yaml  main.rs  startup.rs
Backend/src/routes/: insights.rs  mod.rs  register.rs
brontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
brontend/src/: data.ts
brontend/src/app/: page.scss  page.tsx  template.tsx
brontend/src/app/carousel/: page.tsx
brontend/src/app/journal/: page.tsx
brontend/src/app/journal copy/: page.tsx
brontend/src/app/result/: page.tsx
brontend/src/app/survey/: page.tsx
brontend/src/components/: base.scss
brontend/src/components/arrow-icon/: ArrowIcon.tsx
brontend/src/components/body/: Body.jsx  Body.scss
brontend/src/components/carousel/: CarouselCard.tsx  MyCarousel.scss  MyCarousel.tsx  card.scss
brontend/src/components/footer/: Footer.tsx
brontend/src/components/header/: Header.tsx
brontend/src/components/my-button/: MyButton.tsx
brontend/src/components/result/: Result.tsx  result.scss
brontend/src/components/survey/: SurveyCard.tsx  SurveyCard2.tsx  surveyCard.scss
