[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.4.0"
actix-http = "=3.4.0"
serde = { version = "1", features = ["derive"]}
config = "0.13.3"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = [
"macros",
"sqlite",
"uuid",
"chrono"
]
