[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.4.0"
actix-http = "=3.4.0"
serde = { version = "1", features = ["derive"]}
bcrypt = "0.9.0"
tokio = { version = "1.20.0", features = ["macros"]}
[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = [
"runtime-tokio-native-tls",
"macros",
"sqlite",
"uuid",
"chrono"
]
